--- a/index.html
+++ b/index.html
@@ -1,253 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TinDog</title>
     <!-- BoxIcons -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css" rel="stylesheet" />
     <!-- Css Stylesheets -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Bootstrap sicripts -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+</head>
+
+<body>
     <!-- nav -->
     <section class="header" id="header">
-      <div class="container-fluid">
-        <nav class="header__nav navbar navbar-expand-lg navbar-dark">
-          <a href="#" class="nav__brand navbar-brand">tinDog</a>
+        <div class="container-fluid">
+            <nav class="header__nav navbar navbar-expand-lg navbar-dark">
+                <a href="#" class="nav__brand navbar-brand">tinDog</a>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav__list navbar-nav ml-auto">
-              <li class="nav__item nav-item">
-                <a href="#footer" class="nav__link nav-link">contact</a>
-              </li>
-              <li class="nav__item nav-item">
-                <a href="#pricing" class="nav__link nav-link">pricing</a>
-              </li>
-              <li class="nav__item nav-item">
-                <a href="#cta" class="nav__link nav-link">Download</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="nav__list navbar-nav ml-auto">
+                        <li class="nav__item nav-item">
+                            <a href="#footer" class="nav__link nav-link">contact</a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a href="#pricing" class="nav__link nav-link">pricing</a>
+                        </li>
+                        <li class="nav__item nav-item">
+                            <a href="#cta" class="nav__link nav-link">Download</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
 
-        <div class="row">
-          <div class="header__title col-lg-6">
-            <h1 class="header__text">Meet naw and interesting dogs nearby.</h1>
-            <button class="header__buttons btn btn-dark btn-lg" type="button">
-              <i class="bx bxl-apple"></i> Download
-            </button>
-            <button
-              class="header__buttons btn btn-outline-light btn-lg"
-              type="button"
-            >
-              <i class="bx bxl-play-store"></i> Download
-            </button>
-          </div>
-          <div class="header__img col-lg-6">
-            <img
-              class="header__image"
-              src="./images/iphone6.png"
-              alt="iphone-mockup"
-            />
-          </div>
+            <div class="row">
+                <div class="header__title col-lg-6">
+                    <h1 class="header__text">Meet naw and interesting dogs nearby.</h1>
+                    <button class="header__buttons btn btn-dark btn-lg" type="button">
+                        <i class="bx bxl-apple"></i> Download
+                    </button>
+                    <button class="header__buttons btn btn-outline-light btn-lg" type="button">
+                        <i class="bx bxl-play-store"></i> Download
+                    </button>
+                </div>
+                <div class="header__img col-lg-6">
+                    <img class="header__image" src="./images/iphone6.png" alt="iphone-mockup" />
+                </div>
+            </div>
         </div>
-      </div>
     </section>
     <!-- Features -->
     <section class="features" id="features">
-      <div class="container-fluid row features__container">
-        <div class="col-lg-4 features__details">
-          <i class="bx bxs-check-circle"></i>
-          <h3>Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+        <div class="container-fluid row features__container">
+            <div class="col-lg-4 features__details">
+                <i class="bx bxs-check-circle"></i>
+                <h3>Easy to use.</h3>
+                <p>So easy to use, even your dog could do it.</p>
+            </div>
+            <div class="col-lg-4 features__details">
+                <i class="bx bxs-bullseye"></i>
+                <h3>Elite Clientele</h3>
+                <p>We have all the dogs, the greatest dogs.</p>
+            </div>
+            <div class="col-lg-4 features__details">
+                <i class="bx bxs-heart"></i>
+                <h3>Guaranteed to work.</h3>
+                <p>Find the love of your dog's life or your money back.</p>
+            </div>
         </div>
-        <div class="col-lg-4 features__details">
-          <i class="bx bxs-bullseye"></i>
-          <h3>Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="col-lg-4 features__details">
-          <i class="bx bxs-heart"></i>
-          <h3>Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
-        </div>
-      </div>
     </section>
     <!-- Testimonials -->
     <section class="testimonials" id="testimonials">
-      <div
-        id="carouselExampleControls"
-        class="carousel slide"
-        data-ride="carousel"
-      >
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <h2 class="testimonials__title">
-              I no longer have to sniff other dogs for love. I've found the
-              hottest Corgi on TinDog. Woof.
-            </h2>
-            <img
-              class="testimonials__image"
-              src="./images/dog-img.jpg"
-              alt=""
-            />
-            <em> Pebbles, New York</em>
-          </div>
-          <div class="carousel-item">
-            <h2 class="testimonials__title">
-              My dog used to be so lonely, but with TinDog's help, they've found
-              the love of their life. I think.
-            </h2>
-            <img
-              class="testimonials__image"
-              src="./images/lady-img.jpg"
-              alt=""
-            />
-            <em> Beverly, lllinois</em>
-          </div>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h2 class="testimonials__title">
+                        I no longer have to sniff other dogs for love. I've found the
+                        hottest Corgi on TinDog. Woof.
+                    </h2>
+                    <img class="testimonials__image" src="./images/dog-img.jpg" alt="" />
+                    <em> Pebbles, New York</em>
+                </div>
+                <div class="carousel-item">
+                    <h2 class="testimonials__title">
+                        My dog used to be so lonely, but with TinDog's help, they've found
+                        the love of their life. I think.
+                    </h2>
+                    <img class="testimonials__image" src="./images/lady-img.jpg" alt="" />
+                    <em> Beverly, lllinois</em>
+                </div>
 
-          <a
-            class="carousel-control-prev"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="prev"
-          >
-            <span class="carousel-control-prev-icon"></span>
-          </a>
-          <a
-            class="carousel-control-next"
-            href="#carouselExampleControls"
-            role="button"
-            data-slide="next"
-          >
-            <span class="carousel-control-next-icon"></span>
-          </a>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </a>
+            </div>
         </div>
-      </div>
     </section>
     <!-- Press -->
     <section class="press" id="press">
-      <img class="press__logo" src="./images/TechCrunch.png" alt="" />
-      <img class="press__logo" src="./images/tnw.png" alt="" />
-      <img class="press__logo" src="./images/bizinsider.png" alt="" />
-      <img class="press__logo" src="./images/mashable.png" alt="" />
+        <img class="press__logo" src="./images/TechCrunch.png" alt="" />
+        <img class="press__logo" src="./images/tnw.png" alt="" />
+        <img class="press__logo" src="./images/bizinsider.png" alt="" />
+        <img class="press__logo" src="./images/mashable.png" alt="" />
     </section>
     <!-- Pricing -->
     <section class="pricing" id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+        <h2>A Plan for Every Dog's Needs</h2>
+        <p>Simple and affordable price plans for your and your dog.</p>
 
-      <div class="container-fluid row">
-        <div class="pricing__colomun col-lg-4 col-md-6">
-          <div class="pricing__card card">
-            <div class="card-header">
-              <h3>Chihuahua</h3>
+        <div class="container-fluid row">
+            <div class="pricing__colomun col-lg-4 col-md-6">
+                <div class="pricing__card card">
+                    <div class="card-header">
+                        <h3>Chihuahua</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>Free</h2>
+                        <p>5 Matches Per Day</p>
+                        <p>10 Messages Per Day</p>
+                        <p>Unlimited App Usage</p>
+                        <button type="button" class="card__button btn btn-outline-dark">
+                            Sign Up
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-              <h2>Free</h2>
-              <p>5 Matches Per Day</p>
-              <p>10 Messages Per Day</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="card__button btn btn-outline-dark">
-                Sign Up
-              </button>
-            </div>
-          </div>
-        </div>
 
-        <div class="pricing__colomun col-lg-4 col-md-6">
-          <div class="pricing__card card">
-            <div class="card-header">
-              <h3>Labrador</h3>
+            <div class="pricing__colomun col-lg-4 col-md-6">
+                <div class="pricing__card card">
+                    <div class="card-header">
+                        <h3>Labrador</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$49 / Mo</h2>
+                        <p>Unlimited Matches</p>
+                        <p>Unlimited Messages</p>
+                        <p>Unlimited App Usage</p>
+                        <button type="button" class="card__button btn btn-dark">
+                            Sign Up
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-              <h2>$49 / Mo</h2>
-              <p>Unlimited Matches</p>
-              <p>Unlimited Messages</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="card__button btn btn-dark">
-                Sign Up
-              </button>
+            <div class="pricing__colomun col-lg-4 col-md-6">
+                <div class="pricing__card card">
+                    <div class="card-header">
+                        <h3>Mastiff</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$99 / Mo</h2>
+                        <p>Pirority Listing</p>
+                        <p>5 Matches Per Day</p>
+                        <p>10 Messages Per Day</p>
+                        <p>Unlimited App Usage</p>
+                        <button type="button" class="card__button btn btn-dark">
+                            Sign Up
+                        </button>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="pricing__colomun col-lg-4 col-md-6">
-          <div class="pricing__card card">
-            <div class="card-header">
-              <h3>Mastiff</h3>
-            </div>
-            <div class="card-body">
-              <h2>$99 / Mo</h2>
-              <p>Pirority Listing</p>
-              <p>5 Matches Per Day</p>
-              <p>10 Messages Per Day</p>
-              <p>Unlimited App Usage</p>
-              <button type="button" class="card__button btn btn-dark">
-                Sign Up
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
     <!-- Cta -->
     <section class="cta container-fluid" id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button class="cta__buttons btn btn-dark btn-lg" type="button">
-        <i class="bx bxl-apple"></i> Download
-      </button>
-      <button class="cta__buttons btn btn-light btn-lg" type="button">
-        <i class="bx bxl-play-store"></i> Download
-      </button>
+        <h3>Find the True Love of Your Dog's Life Today.</h3>
+        <button class="cta__buttons btn btn-dark btn-lg" type="button">
+            <i class="bx bxl-apple"></i> Download
+        </button>
+        <button class="cta__buttons btn btn-light btn-lg" type="button">
+            <i class="bx bxl-play-store"></i> Download
+        </button>
     </section>
 
     <footer class="footer" id="footer">
-      <a href="#" class="footer__link"><i class="bx bxl-twitter"></i></a>
-      <a href="#" class="footer__link"><i class="bx bxl-facebook"></i></a>
-      <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
-      <a href="#" class="footer__link"><i class="bx bxs-envelope"></i></a>
-
-      <p>&#169; Copyright All Reversit</p>
+        <a href="#" class="footer__link"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="footer__link"><i class="bx bxl-facebook"></i></a>
+        <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="footer__link"><i class="bx bxs-envelope"></i></a>
+        
+        <p>&#169; Copyright All Reversit <br> <a href="https://github.com/muath-khatib">Muath Al Khatib</a></p>
     </footer>
 
     <script src="./js/main.js"></script>
-  </body>
+</body>
+
 </html>
