--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <a href="#" class="footer__link"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="footer__link"><i class="bx bxs-envelope"></i></a>
         
-        <p>&#169; Copyright All Reversit <br> <a href="https://github.com/muath-khatib">Muath Al Khatib</a></p>
+        <p>&#169; Copyright All Reversit <br> <a href="https://github.com/muath-khatib" target="_blank">Muath Al Khatib</a></p>
     </footer>
 
     <script src="./js/main.js"></script>
